# Living-Memory

./: .env.example  .gitignore  PROJECT.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/data/: flight_cache.json  graph_store.json
backend/src/: api.py  config.py
backend/src/agents/: flight_agent.py  friend_filter.py  history_agent.py  mcp_agent.py  orchestrator.py  place_agent.py  synthesizer.py  welcome_summarizer.py  wellness_agent.py
backend/src/graph/: identity.py  schema.py  store.py
backend/src/ingest/: flight.py  observation.py  pms_client_fake.py
backend/src/prompts/: friend_filter.md  history_agent.md  observation_parser.md  place_agent.md  synthesizer.md
backend/src/tools/: calculator_tool.py  flight_status_tool.py  github_tool.py  placemaker_tool.py  weather_tool.py
backend/src/voice/: ambassador.py  briefing_tts.py  stt.py
backend/tests/: test_friend_filter.py  test_mcp_agent.py
data/placemakers/: placemakers.json
data/properties/: carlyle.json  crillon.json  hong_kong.json  sand_hill.json  schloss_fuschl.json
data/synthetic/: guests.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/concierge/: page.tsx
frontend/app/guest/: page.tsx
frontend/app/manager/: page.tsx
frontend/app/my-data/: page.tsx
frontend/app/welcome/: page.tsx
scripts/: generate_synthetic_data.py  run_demo_scenario.py
